Added remove server from list button

--- a/ServerStatusNotifier/app/src/main/res/layout/server_status.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/server_status.xml
@@ -32,10 +32,11 @@
     <ImageButton
         android:id="@+id/serverInfoButton"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentEnd="true"
-        android:layout_centerVertical="true"
-        android:layout_marginEnd="14dp"
+        android:layout_height="match_parent"
+        android:layout_alignParentTop="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="12dp"
+        android:layout_toStartOf="@+id/deleteServerButton"
         android:background="@android:color/transparent"
         app:srcCompat="@android:drawable/ic_dialog_info" />
 
@@ -66,5 +67,16 @@
         android:textColor="@android:color/white"
         android:textAlignment="viewStart"
         android:textSize="24sp" />
+
+    <ImageButton
+        android:id="@+id/deleteServerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentTop="true"
+        android:layout_alignParentEnd="true"
+        android:layout_marginTop="0dp"
+        android:layout_marginEnd="0dp"
+        android:background="@android:color/transparent"
+        app:srcCompat="@android:drawable/ic_delete" />
 
 </RelativeLayout>
