Reformating, fixes, added server details activity

--- a/ServerStatusNotifier/app/src/main/res/drawable/spruce_background.xml
+++ b/ServerStatusNotifier/app/src/main/res/drawable/spruce_background.xml
@@ -3,7 +3,7 @@
 
     <item>
         <bitmap
-            android:src="@drawable/wood_plank"
+            android:src="@drawable/spruce_plank"
             android:tileMode="repeat" />
     </item>
     <item>
