--- a/ServerStatusNotifier/app/src/main/res/layout/activity_server_details.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/activity_server_details.xml
@@ -1,6 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:orientation="vertical"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:background="@drawable/plank_background"
+    android:paddingHorizontal="10dp"
+    android:paddingStart="10dp"
+    android:paddingEnd="10dp">
 
+    <TextView
+        android:id="@+id/serverName"
+        android:layout_width="match_parent"
+        android:layout_height="54dp"
+        android:fontFamily="@font/minecraft"
+        android:text="TextView"
+        android:textAlignment="center"
+        android:textAllCaps="false"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:gravity="center"
+        android:background="@drawable/spruce_background"
+        android:layout_marginBottom="20dp"/>
+
+    <include
+        android:id="@+id/playersCountPanel"
+        layout="@layout/details_item"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="3dp" />
+
+    <include
+        android:id="@+id/versionPanel"
+        layout="@layout/details_item"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
+        android:layout_marginBottom="3dp" />
 </LinearLayout>
