--- a/ServerStatusNotifier/app/src/main/res/layout/server_status.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/server_status.xml
@@ -4,8 +4,12 @@
     android:layout_width="match_parent"
     android:layout_height="80dp"
     android:background="@drawable/plank_background"
+    android:layout_marginTop="10dp"
+    android:layout_marginBottom="10dp"
+    android:layout_marginStart="10dp"
+    android:layout_marginEnd="10dp"
     android:layout_marginHorizontal="10dp"
-    android:layout_marginVertical="10dp" >
+    android:layout_marginVertical="10dp">
 
     <TextView
         android:id="@+id/serverName"
@@ -36,7 +40,7 @@
         app:srcCompat="@android:drawable/ic_dialog_info" />
 
     <ImageView
-        android:id="@+id/status_image"
+        android:id="@+id/itemImage"
         android:layout_width="38dp"
         android:layout_height="34dp"
         android:layout_below="@+id/serverName"
@@ -49,10 +53,10 @@
         android:id="@+id/status_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignBottom="@+id/status_image"
+        android:layout_alignBottom="@+id/itemImage"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="-1dp"
-        android:layout_toEndOf="@+id/status_image"
+        android:layout_toEndOf="@+id/itemImage"
         android:fontFamily="@font/minecraft"
         android:shadowColor="#000000"
         android:shadowDx="1.8"
