--- a/ServerStatusNotifier/app/src/main/res/layout/activity_server_details.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/activity_server_details.xml
@@ -33,6 +33,6 @@
         android:id="@+id/versionPanel"
         layout="@layout/details_item"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="wrap_content"
         android:layout_marginBottom="3dp" />
 </LinearLayout>
