--- a/ServerStatusNotifier/app/src/main/res/layout/activity_servers.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/activity_servers.xml
@@ -8,13 +8,13 @@
     android:tileMode="repeat"
     tools:context=".ServersActivity">
 
-    <android.support.design.widget.AppBarLayout
+    <com.google.android.material.appbar.AppBarLayout
         android:id="@+id/appBarLayout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:theme="@style/AppTheme.AppBarOverlay">
 
-        <android.support.v7.widget.Toolbar
+        <androidx.appcompat.widget.Toolbar
             android:id="@+id/toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
@@ -28,11 +28,11 @@
                 android:background="@android:color/transparent"
                 android:layout_gravity="end"
                 app:srcCompat="@android:drawable/ic_popup_sync" />
-        </android.support.v7.widget.Toolbar>
+        </androidx.appcompat.widget.Toolbar>
 
-    </android.support.design.widget.AppBarLayout>
+    </com.google.android.material.appbar.AppBarLayout>
 
-    <android.support.design.widget.FloatingActionButton
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addServerButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -47,7 +47,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:srcCompat="@drawable/nether_star" />
 
-    <android.support.v7.widget.RecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/serverItemRecyclerView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
