--- a/ServerStatusNotifier/app/src/main/res/layout/details_item.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/details_item.xml
@@ -1,32 +1,31 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.google.android.flexbox.FlexboxLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="50dp"
-    android:layout_marginHorizontal="6dp"
-    android:layout_marginVertical="6dp"
+    android:layout_height="wrap_content"
     android:layout_marginStart="6dp"
     android:layout_marginTop="6dp"
     android:layout_marginEnd="6dp"
     android:layout_marginBottom="6dp"
-    android:background="@drawable/spruce_background">
+    android:paddingStart="5dp"
+    android:paddingBottom="8dp"
+    android:paddingEnd="5dp"
+    android:paddingTop="8dp"
+    android:background="@drawable/spruce_background"
+    app:flexWrap="wrap">
 
     <TextView
         android:id="@+id/itemTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentBottom="true"
-        android:layout_marginStart="18dp"
-        android:layout_marginTop="11dp"
-        android:layout_marginBottom="12dp"
+        android:gravity="start|center_vertical"
+        android:layout_marginEnd="3dp"
         android:fontFamily="@font/minecraft"
         android:shadowColor="#000000"
         android:shadowDx="1.8"
         android:shadowDy="1.5"
         android:shadowRadius="1.6"
-        android:text="title"
-        android:textAlignment="viewStart"
+        android:text="dawdawdawd"
         android:textColor="@android:color/white"
         android:textSize="24sp" />
 
@@ -34,18 +33,16 @@
         android:id="@+id/itemData"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentEnd="true"
-        android:layout_marginTop="11dp"
-        android:layout_marginEnd="17dp"
+        android:gravity="end|center_vertical"
+        android:layout_marginStart="3dp"
         android:fontFamily="@font/minecraft"
         android:shadowColor="#000000"
         android:shadowDx="1.8"
         android:shadowDy="1.5"
         android:shadowRadius="1.6"
         android:text="value"
-        android:textAlignment="viewStart"
         android:textColor="@android:color/white"
-        android:textSize="24sp" />
+        android:textSize="24sp"
+        app:layout_flexGrow="1"/>
 
-</RelativeLayout>
+</com.google.android.flexbox.FlexboxLayout>
