--- a/ServerStatusNotifier/app/src/main/res/layout/activity_server_console.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/activity_server_console.xml
@@ -5,17 +5,20 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/plank_background"
-    android:paddingStart="10dp"
-    android:paddingEnd="10dp"
-    android:paddingTop="10dp"
-    android:paddingBottom="10dp">
+    android:paddingStart="5dp"
+    android:paddingEnd="5dp"
+    android:paddingTop="5dp"
+    android:paddingBottom="5dp"
+    android:weightSum="10">
 
     <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/console_recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="440dp"
+        android:layout_height="fill_parent"
+        android:layout_weight="9"
+        android:background="@android:color/black"
         android:paddingStart="2dp"
         android:paddingEnd="2dp"
-        android:background="@android:color/black"
         tools:listitem="@layout/console_line">
 
     </androidx.recyclerview.widget.RecyclerView>
@@ -23,7 +26,8 @@
     <AutoCompleteTextView
         android:id="@+id/console_input"
         android:layout_width="match_parent"
-        android:layout_height="50dp"
+        android:layout_height="30dp"
         android:background="@android:color/white"
-        android:text="AutoCompleteTextView" />
+        android:text="AutoCompleteTextView"
+        android:layout_weight="1"/>
 </LinearLayout>
