--- a/ServerStatusNotifier/app/src/main/res/layout/activity_server_details.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/activity_server_details.xml
@@ -35,4 +35,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="3dp" />
+
+    <Button
+        android:id="@+id/console_button"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:fontFamily="@font/minecraft"
+        android:text="Console" />
 </LinearLayout>
