--- a/ServerStatusNotifier/app/src/main/res/layout/activity_server_console.xml
+++ b/ServerStatusNotifier/app/src/main/res/layout/activity_server_console.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
@@ -23,11 +24,28 @@
 
     </androidx.recyclerview.widget.RecyclerView>
 
-    <AutoCompleteTextView
-        android:id="@+id/console_input"
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="30dp"
-        android:background="@android:color/white"
-        android:text="AutoCompleteTextView"
-        android:layout_weight="1"/>
+        android:layout_height="40dp"
+        android:orientation="horizontal"
+        android:layout_weight="1">
+
+        <EditText
+            android:id="@+id/consoleInput"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            android:layout_weight="6"
+            android:paddingStart="3dp"
+            android:background="@android:color/white"
+            android:text="AutoCompleteTextView" />
+
+        <ImageButton
+            android:id="@+id/sendButton"
+            android:layout_width="0dp"
+            android:layout_height="match_parent"
+            app:srcCompat="@android:drawable/ic_menu_send"
+            android:layout_weight="1"
+            android:foreground="?attr/selectableItemBackground"
+            android:background="@android:color/white"/>
+    </LinearLayout>
 </LinearLayout>
